--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,9 @@
 name: UnioStats
-main: me.UnioDex.uniostats.UnioStats
+main: me.uniodex.uniostats.UnioStats
 author: 'UnioDex'
 version: 1.0
+
+softdepend: [MythicMobs]
 
 commands:
   uniostats:
