Last uncommited updates.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: me.uniodex.uniostats.UnioStats
 author: 'UnioDex'
 version: 1.0
 
+depend: [UnioEssentials]
 softdepend: [MythicMobs, PlaceholderAPI]
 
 commands:
